More reformatting and modularizing code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,5 @@ project(Space_Battle)
 set(CMAKE_CXX_STANDARD 14)
 
 find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
-add_executable(Space_Battle
-        src/main.cpp src/DTO/BulletCollector.cpp src/DTO/Bullet.cpp)
+add_executable(Space_Battle src/main.cpp src/Player.cpp src/PlayState.cpp)
 target_link_libraries(Space_Battle sfml-graphics sfml-audio)
